--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <script>
         document.getElementById("loadtext").innerText = "极速加载已启用"
     </script>
-    <script async src="https://cdn.jsdelivr.net/gh/qinlili23333/ruffle-voicesea@main/ruffle.js"></script>
+    <script async src="https://cdn.jsdelivr.net/gh/qinlili23333/ruffle-voicesea@main/ruffle.min.js"></script>
     <script>
         var fullblob;
         var blob0;
