--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+    <link rel="manifest" href="./manifest.json">
+    <meta name="theme-color" content="#46B0EC">
     <link rel="icon" href="./favicon.jpg">
     <style>
         body {
