--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>海之声-VoicesFromTheSea 由 琴梨梨 & Ruffle 驱动</title>
 
 <head>
+    <meta name="description" content="本项目是海之声基于Ruffle的网页在线游玩版本。由于Flash已进入生命末期，为延续优秀免费游戏的生命故制作本项目。" />
+    <link rel="canonical" href="https://voicesea.qinlili.bid/" />
+    <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#46B0EC">
