--- a/index.html
+++ b/index.html
@@ -10,89 +10,18 @@
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#46B0EC">
     <link rel="icon" href="./favicon.jpg">
-    <style>
-        body {
-            -webkit-font-smoothing: subpixel-antialiased;
-            margin: 0px;
-            -webkit-user-select: none;
-            user-select: none;
-        }
-
-        @media (max-width: 700px) {
-            #floatTop {
-                flex-direction: column !important;
-            }
-        }
-
-        .topBtn {
-            flex-direction: row;
-            display: flex;
-            right: 0px;
-            float: right;
-            height: auto;
-            margin-left: 5px;
-            margin-right: 5px;
-            padding-left: 5px;
-            padding-right: 5px;
-            width: auto;
-            transition: background-color 0.2s, transform 0.3s ease-in-out;
-        }
-
-        .topBtn:hover {
-            transform: scale(1.1, 1.1);
-            background-color: #cccccc;
-        }
-
-        .topBtn:active {
-            background-color: #999999
-        }
-
-        .topBtnIcon {
-            margin: 2px;
-            width: 28px;
-            height: 28px;
-        }
-
-        .topBtnText {
-            margin: 0px;
-        }
-
-        #player {
-            width: auto;
-            height: auto;
-            position: absolute;
-            top: 32px;
-            bottom: 0px;
-            left: 0px;
-            right: 0px;
-        }
-
-        #savePanel {
-            z-index: 999;
-            position: fixed;
-            height: auto;
-            min-height: 32px;
-            width: auto;
-            left: 0px;
-            right: 0px;
-            bottom: 0px;
-            padding: 5px;
-            background-color: white;
-            box-shadow: 0px -2px 2px 1px rgba(0, 0, 0, 0.5);
-        }
-    </style>
+    <link href="./index.css" rel="stylesheet">
     <script async src="./index.core.js"></script>
-    <script async="" src="https://qinlili.bid/jslib/Bella.js"></script>
+    <script async src="https://qinlili.bid/jslib/Bella.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="floatTop"
-        style="z-index: 999;position: fixed;display: flex;flex-direction: row;height:auto;width:auto;left:0px;right:0px;padding-left: 5px;padding-right:5px;box-shadow: 0px 2px 2px 1px rgba(0,0,0,0.5);background-color:white;">
-        <svg id="loadingSvg" class="topBtnIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="#e87a90">
+    <div id="floatTop">
+        <svg id="loadingSvg" class="topBtnIcon" viewBox="0 0 32 32" fill="#e87a90">
             <path opacity=".25"
                 d="M16 0 A16 16 0 0 0 16 32 A16 16 0 0 0 16 0 M16 4 A12 12 0 0 1 16 28 A12 12 0 0 1 16 4" />
             <path d="M16 0 A16 16 0 0 1 32 16 L28 16 A12 12 0 0 0 16 4z">
-                <animateTransform attributeName="transform" type="rotate" from="0 16 16" to="360 16 16" dur="0.8s"
+                <animateTransform attributeName="transform" type="rotate" from="0 16 16" to="360 16 16" dur="2s"
                     repeatCount="indefinite" />
             </path>
         </svg>
