--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 
 <body>
     <div id="floatTop">
-        <svg id="loadingSvg" class="topBtnIcon" viewBox="0 0 32 32" fill="#e87a90">
-            <path opacity=".25"
-                d="M16 0 A16 16 0 0 0 16 32 A16 16 0 0 0 16 0 M16 4 A12 12 0 0 1 16 28 A12 12 0 0 1 16 4" />
-            <path d="M16 0 A16 16 0 0 1 32 16 L28 16 A12 12 0 0 0 16 4z">
-                <animateTransform attributeName="transform" type="rotate" from="0 16 16" to="360 16 16" dur="2s"
-                    repeatCount="indefinite" />
-            </path>
-        </svg>
-        <H2 id="title" style="margin:0px;padding-right:20px;">正在加载页面</H2>
+        <div class="loadTitle">
+            <svg id="loadingSvg" class="topBtnIcon" viewBox="0 0 32 32" fill="#e87a90">
+                <path opacity=".25"
+                    d="M16 0 A16 16 0 0 0 16 32 A16 16 0 0 0 16 0 M16 4 A12 12 0 0 1 16 28 A12 12 0 0 1 16 4" />
+                <path d="M16 0 A16 16 0 0 1 32 16 L28 16 A12 12 0 0 0 16 4z">
+                    <animateTransform attributeName="transform" type="rotate" from="0 16 16" to="360 16 16" dur="2s"
+                        repeatCount="indefinite" />
+                </path>
+            </svg>
+            <H2 id="title" style="margin:0px;padding-right:20px;">正在加载页面</H2>
+        </div>
     </div>
 </body>
 
